foolish/foolish-core/src/snapshots/foolish_core__approval_tests__identifierShadowingIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 xwq2kgyDBZtO3Z7kBUqiD+oinHpRGmeKtxjNNaveaLMM2YJOYFYwOC9b5YxlwZSioQ7lbpZCN2w2KVPY35hHDQ==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(10) [INDEPENDENT]
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  x = 
  Int(20) [INDEPENDENT]
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(10) [INDEPENDENT]
  Int(20) [INDEPENDENT]
  x = 
  Int(20) [INDEPENDENT]
  Int(20) [INDEPENDENT]
