foolish/foolish-core/src/snapshots/foolish_core__approval_tests__large_numbers.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 6EbexLrM+RysBwJ5cinhQLdXhqFRSmC7Lwe7frr8PJY3mzI3+5te+11ZYwJMfKc1Vzb4eYNNY+dhBJi3290uCg==
INPUT: {a = 1000000; b = 999999; c = a - b;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1000000) [INDEPENDENT]
  b = 
  Int(999999) [INDEPENDENT]
  c = 
  Operator(-) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1000000) [INDEPENDENT]
  b = 
  Int(999999) [INDEPENDENT]
  c = 
  Int(1) [CONSTANT]
