foolish/foolish-core/src/snapshots/foolish_core__approval_tests__levelSkippingSearchConstanic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  badValue = 
  Search(pattern='^undeclaredIdentifier$', dir=BACKWARD, FREE) [EMBRYONIC]
  nested = 
  Brane [EMBRYONIC]
    x = 
    Search(pattern='^badValue$', dir=BACKWARD, FREE) [EMBRYONIC]
  y = 
  Search(pattern='^badValue$', dir=BACKWARD, FREE) [EMBRYONIC]
  z = 
  Search(pattern='^y$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  badValue = 
  Search(pattern='^undeclaredIdentifier$', dir=BACKWARD, FREE) [ECONSTANIC]
  nested = 
  Brane [WOCONSTANIC]
    x = 
    Search(pattern='^badValue$', dir=BACKWARD, FREE) [WOCONSTANIC]
      Search(pattern='^undeclaredIdentifier$', dir=BACKWARD, FREE) [ECONSTANIC]
  y = 
  Search(pattern='^badValue$', dir=BACKWARD, FREE) [WOCONSTANIC]
    Search(pattern='^undeclaredIdentifier$', dir=BACKWARD, FREE) [ECONSTANIC]
  z = 
  Search(pattern='^y$', dir=BACKWARD, FREE) [WOCONSTANIC]
    Search(pattern='^undeclaredIdentifier$', dir=BACKWARD, FREE) [ECONSTANIC]
