foolish/foolish-core/src/snapshots/foolish_core__approval_tests__levelSkippingSearchFound.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(42) [INDEPENDENT]
  y = 
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  nested = 
  Brane [EMBRYONIC]
    z = 
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  level1 = 
  Brane [EMBRYONIC]
    a = 
    Int(100) [INDEPENDENT]
    level2 = 
    Brane [EMBRYONIC]
      level3 = 
      Brane [EMBRYONIC]
        b = 
        Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(42) [INDEPENDENT]
  y = 
  Int(42) [INDEPENDENT]
  nested = 
  Brane [CONSTANT]
    z = 
    Int(42) [INDEPENDENT]
  level1 = 
  Brane [CONSTANT]
    a = 
    Int(100) [INDEPENDENT]
    level2 = 
    Brane [CONSTANT]
      level3 = 
      Brane [CONSTANT]
        b = 
        Int(100) [INDEPENDENT]
