foolish/foolish-core/src/snapshots/foolish_core__approval_tests__levelSkippingSearchNotFound.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 3kpc9vnCSreGvxC1BRC+9nbOG8ya2+JF0OQq+3pzPyMILj6CLUIIr918Hp3TDm1npBLJkINPZgEwYJX8YcPdCw==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Search(pattern='^undeclaredIdentifier$', dir=BACKWARD, FREE) [EMBRYONIC]
  outer = 
  Brane [EMBRYONIC]
    inner = 
    Brane [EMBRYONIC]
      y = 
      Search(pattern='^missingValue$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  x = 
  Search(pattern='^undeclaredIdentifier$', dir=BACKWARD, FREE) [ECONSTANIC]
  outer = 
  Brane [WOCONSTANIC]
    inner = 
    Brane [WOCONSTANIC]
      y = 
      Search(pattern='^missingValue$', dir=BACKWARD, FREE) [ECONSTANIC]
