foolish/foolish-core/src/snapshots/foolish_core__approval_tests__level_skipping_search_found.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 8yLEWRxvweXGO1jYAYjUE5lnp2ej43ZidmD3v/sZyD/sNSrdpigcO4DlmfaNOb3MkziZT43+5I9diXOJslJdBw==
INPUT: {x = 42; y = x; nested = {z = x};}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(42) [INDEPENDENT]
  y = 
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  nested = 
  Brane [EMBRYONIC]
    z = 
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(42) [INDEPENDENT]
  y = 
  Int(42) [INDEPENDENT]
  nested = 
  Brane [CONSTANT]
    z = 
    Int(42) [INDEPENDENT]
