foolish/foolish-core/src/snapshots/foolish_core__approval_tests__level_skipping_search_not_found.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 LnkoylUEd2rCRXn8cJsQq3n1OzL+PM+bf798HBWgfqO4SV7GR15EJ/7G7dL3Gz1XRlrVtF5lepxK+w415I7cDQ==
INPUT: {x = undeclared; outer = {inner = {y = missing};};}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Search(pattern='^undeclared$', dir=BACKWARD, FREE) [EMBRYONIC]
  outer = 
  Brane [EMBRYONIC]
    inner = 
    Brane [EMBRYONIC]
      y = 
      Search(pattern='^missing$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  x = 
  Search(pattern='^undeclared$', dir=BACKWARD, FREE) [ECONSTANIC]
  outer = 
  Brane [WOCONSTANIC]
    inner = 
    Brane [WOCONSTANIC]
      y = 
      Search(pattern='^missing$', dir=BACKWARD, FREE) [ECONSTANIC]
