foolish/foolish-core/src/snapshots/foolish_core__approval_tests__mixedExpressionsIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 cfAnoFhBviiHo+sCEPYJIwNsN3qj6PkUiAWXo4fklkyPe3jQnWCnQOARlKj3Bx5RIfqDl3sJQ29et+VAypQnCw==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  Int(42) [INDEPENDENT]
  Operator(*) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Int(3) [INDEPENDENT]
      Int(4) [INDEPENDENT]
    Int(2) [INDEPENDENT]
  Operator(-) [EMBRYONIC]
    Int(15) [INDEPENDENT]
  Operator(/) [EMBRYONIC]
    Int(100) [INDEPENDENT]
    Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(42) [INDEPENDENT]
  Int(14) [CONSTANT]
  Int(-15) [CONSTANT]
  Int(20) [CONSTANT]
