foolish/foolish-core/src/snapshots/foolish_core__approval_tests__mixedOperatorsIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {10 + 5 - 3 * 2;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(-) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Int(10) [INDEPENDENT]
      Int(5) [INDEPENDENT]
    Operator(*) [EMBRYONIC]
      Int(3) [INDEPENDENT]
      Int(2) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(9) [CONSTANT]
