foolish/foolish-core/src/snapshots/foolish_core__approval_tests__mixed_expressions.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {42; (3 + 4) * 2; -15; 100 / 5;}
[0] PARSED:
Brane [EMBRYONIC]
  Int(42) [INDEPENDENT]
  Operator(*) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Int(3) [INDEPENDENT]
      Int(4) [INDEPENDENT]
    Int(2) [INDEPENDENT]
  Operator(-) [EMBRYONIC]
    Int(15) [INDEPENDENT]
  Operator(/) [EMBRYONIC]
    Int(100) [INDEPENDENT]
    Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(42) [INDEPENDENT]
  Int(14) [CONSTANT]
  Int(-15) [CONSTANT]
  Int(20) [CONSTANT]
